[package]
name = "pam-client"
version = "0.1.0"
authors = ["Christoph Grenz <christophg+gitorious@grenz-bonn.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["cli"]
cli = ["rpassword"]

[dependencies]
pam-sys = "0.5.6"
libc = "0.2.82"
rustversion = "1.0"
rpassword = { version="5.0.0", optional=true }
