[package]
name = "pam-client"
version = "0.1.0"
authors = ["Christoph Grenz <christophg+gitorious@grenz-bonn.de>"]
edition = "2018"
description = "Application API wrapper to Pluggable Authentication Modules (PAM)"
readme = "README.md"
repository = "https://gitlab.com/cg909/rust-pam-client/"
license = "MPL-2.0"
license-file = "LICENSE"
keywords = ["PAM", "libpam", "authentication"]
categories = ["authentication", "api-bindings", "os::unix-apis"]

[features]
default = ["cli"]
cli = ["rpassword"]

[dependencies]
pam-sys = "0.5.6"
libc = "0.2.82"
rustversion = "1.0"
rpassword = { version="5.0.0", optional=true }
