[package]
name = "pam-client"
version = "0.3.2"
authors = ["Christoph Grenz <christophg+gitorious@grenz-bonn.de>"]
edition = "2018"
description = "Application API wrapper to Pluggable Authentication Modules (PAM)"
readme = "README.md"
repository = "https://gitlab.com/cg909/rust-pam-client/"
license = "MPL-2.0"
keywords = ["PAM", "libpam", "authentication"]
categories = ["authentication", "api-bindings", "os::unix-apis"]

[features]
default = ["cli"]
cli = ["rpassword"]

[dependencies]
bitflags = "1.2"
libc = "0.2"
pam-sys = "1.0.0-alpha3"
rustversion = "1.0"
enum-repr = "0.2"
rpassword = { version="5.0.0", optional=true }
serde = { version="1.0", optional=true, features=["derive"] }
